update my booking

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/png">
     <title>Royal Hotel</title>
     <!-- Bootstrap CSS -->
+    <link href="~/assets/admin/css/icons.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/assets/landing-page/css/bootstrap.css">
     <link rel="stylesheet" href="~/assets/landing-page/vendors/linericon/style.css">
     <link rel="stylesheet" href="~/assets/landing-page/css/font-awesome.min.css">
