--- a/WebApp/Views/Home/MyBookingDetails.cshtml
+++ b/WebApp/Views/Home/MyBookingDetails.cshtml
@@ -44,7 +44,7 @@
                         @{
                             int i = 1;
                         }
-                        @foreach (var item in Model.BookingDetailDto)
+                        @foreach (var item in Model.BookingDetailDto!)
                         {
                             <tr>
                                 <td>@i++</td>
@@ -74,14 +74,23 @@
                         @{
                             int j = 1;
                         }
-                        @foreach (var item in Model.CostBookingDto)
+                        @if (Model.CostBookingDto == null)
                         {
                             <tr>
-                                <td>@j++</td>
-                                <td>@item.Name</td>
-                                <td>@item.Image</td>
-                                <td>@item.Price</td>
+                                <td colspan="6" style="text-align: center; vertical-align: middle;">@Localizer["Orders do not include additional services and fees"]</td>
                             </tr>
+                        }
+                        else
+                        {
+                            foreach (var item in Model.CostBookingDto)
+                            {
+                                <tr>
+                                    <td>@j++</td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Image</td>
+                                    <td>@item.Price</td>
+                                </tr>
+                            }
                         }
                     </tbody>
                 </table>
