--- a/WebApp/Areas/Admin/Views/Booking/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Booking/Index.cshtml
@@ -3,10 +3,10 @@
 }
 
 @section Scripts {
-    <script src="~/admin-app/controllers/voteBooking/index.js" asp-append-version="true"></script>
+    <script src="~/admin-app/controllers/booking/index.js" asp-append-version="true"></script>
     <script>
-        var voteBookingObj = new VoteBookingController();
-        voteBookingObj.initialize();
+        var bookingObj = new BookingController();
+        bookingObj.initialize();
     </script>
 }
 
@@ -30,12 +30,17 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <div class="row">
-                    <div class="col-sm-10 form-group row">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-12 col-lg-6 col-md-4 col-sm-12 form-group row">
                         <label class="col-sm-auto col-form-label" for="txtKeyword">Tìm kiếm</label>
-                        <div class="col-sm-3">
+                        <div class="col-sm-6 col-lg-6 col-12">
                             <input type="text" id="txtKeyword" class="form-control" placeholder="Tiêu đề">
                         </div>
+                    </div>
+                    <div class="col-lg-6 col-md-8 col-sm-12 form-group text-lg-right text-md-right text-sm-left d-flex justify-content-end">
+                        <button type="button" class="btn btn-primary" id="btn-exportExcel">
+                            <i class="fe-download"></i> Xuất Excel
+                        </button>
                     </div>
                 </div>
 
@@ -45,11 +50,12 @@
                             <th>Stt</th>
                             <th>Khách hàng</th>
                             <th>Mã đặt phòng</th>
-                            <th>Ngày đặt</th>
                             <th>Ngày nhận</th>
+                            <th>Ngày trả</th>
                             <th>Số phòng</th>
                             <th>Dịch vụ</th>
                             <th>Tổng hóa đơn</th>
+                            <th>Ngày đặt</th>
                             <th>Trạng thái</th>
                             <th class="action-columns">Thao tác</th>
                         </tr>
@@ -76,11 +82,12 @@
         <td>{{Order}}</td>
         <td>{{FullName}}</td>
         <td>{{BookingCode}}</td>
-        <td>{{TransactionDate}}</td>
         <td>{{CheckInDate}}</td>
+        <td>{{CheckOutDate}}</td>
         <td>{{BookedRoomNumber}}</td>
         <td>{{ServicesArising}}</td>
         <td>{{TotalAmount}}</td>
+        <td>{{TransactionDate}}</td>
         <td>{{{Status}}}</td>
         <td class="text-center action-columns">
             <a href="#" data-id="{{Id}}" class="btn btn-xs btn-info btn-edit" ><i class="fe-edit-2"></i></a>
@@ -88,3 +95,5 @@
         </td>
     </tr>
 </script>
+
+<partial name="Components/_ImportExcelModal" />
