--- a/WebApp/Areas/Admin/Views/User/_ChangePassUser.cshtml
+++ b/WebApp/Areas/Admin/Views/User/_ChangePassUser.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="modal-change-password-user" class="modal fade modal-darkorange in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="position: absolute; left: 38%; top: 49%; transform: translate(-50%, -50%);">
+﻿<div id="modal-change-password-user" class="modal fade modal-darkorange in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="position: fixed; left: 38%; top: 49%; transform: translate(-50%, -50%);">
     <div class="modal-dialog modal-sm">
         <div class="modal-content" style="width: 50rem">
             <div class="modal-header">
