--- a/WebApp/Views/Room/RoomDetails.cshtml
+++ b/WebApp/Views/Room/RoomDetails.cshtml
@@ -7,6 +7,7 @@
     ViewData["Title"] = Localizer["RoomDetails"];
     var httpContext = ViewContext.HttpContext;
     string appDomain = $"{httpContext.Request.Scheme}://{httpContext.Request.Host}";
+    bool isLoggedIn = !string.IsNullOrEmpty(User.GetSpecificClaim("UserId"));
 }
 @section Styles {
     <link href="~/assets/client1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -128,15 +129,18 @@
                     <aside class="widget">
                         <div class="vbf">
                             <h2 class="form_title"><i class="fa fa-calendar"></i> BOOK ONLINE</h2>
-                            <form id="booking-form" class="inner">
+                            <form id="booking-form" method="post" class="inner">
                                 <div class="form-group">
-                                    <input class="form-control" name="booking-name" placeholder="Enter Your Name" type="text">
+                                    <input type="hidden" name="Id" id="hidId" value="0" />
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" name="booking-email" placeholder="Enter Your Email Address" type="email">
+                                    <input class="form-control" name="booking-name" value="@Model.FullName" placeholder="Enter Your Name" type="text">
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" name="booking-phone" placeholder="Enter Your Phone Number" type="text">
+                                    <input class="form-control" name="booking-email" value="@Model.Email" placeholder="Enter Your Email Address" type="email">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" name="booking-phone" value="@Model.PhoneNumber" placeholder="Enter Your Phone Number" type="text">
                                 </div>
                                 <div class="form-group">
                                     <div class="form_select">
@@ -145,29 +149,29 @@
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
                                     <div class="form_select">
-                                        <input class="form-control" name="booking-phone" value="@Model.Room.Adult Adult" type="text" readonly>
+                                        <input class="form-control" name="Adult" value="@Model.Room.Adult Adult" type="text" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
                                     <div class="form_select">
-                                        <input class="form-control" name="booking-phone" value="@Model.Room.Kid Child" type="text" readonly>
+                                        <input class="form-control" name="Kid" value="@Model.Room.Kid Child" type="text" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
                                     <div class="input-group">
                                         <div class="form_date">
-                                            <input type="date" class="datepicker form-control md_noborder_right" name="booking-checkin" placeholder="Arrival Date">
+                                            <input type="date" class="datepicker form-control md_noborder_right" name="CheckInDate" placeholder="Arrival Date" required>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
                                     <div class="input-group">
                                         <div class="form_date">
-                                            <input type="date" class="datepicker form-control" name="booking-checkout" placeholder="Departure Date">
+                                            <input type="date" class="datepicker form-control" name="CheckOutDate" placeholder="Departure Date" required>
                                         </div>
                                     </div>
                                 </div>
-                                <button class="button btn_lg btn_blue btn_full" type="submit">BOOK A ROOM NOW</button>
+                                <button class="button btn_lg btn_blue btn_full" id="btn-booking" type="submit">BOOK A ROOM NOW</button>                               
                             </form>
                         </div>
                     </aside>
@@ -248,9 +252,6 @@
                 </div>
             }
         </div>
-        @{
-            bool isLoggedIn = !string.IsNullOrEmpty(User.GetSpecificClaim("UserId"));
-        }
         @if (isLoggedIn)
         {
             <div class="comment-form">
