--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -39,6 +39,14 @@
 
     @RenderBody()
 
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Royal_Hotel_chat"
+  agent-id="411c2fd7-b5ad-4113-98b5-560f85c37215"
+  language-code="en">
+</df-messenger>
+
     <!--================ start footer Area  =================-->
     <footer class="footer-area section_gap">
         <div class="container">
