--- a/WebApp/Areas/Admin/Views/Room/_ListImages.cshtml
+++ b/WebApp/Areas/Admin/Views/Room/_ListImages.cshtml
@@ -6,22 +6,41 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal" role="form" id="formChangePassword">
+                <form class="form-horizontal" role="form" id="formRoomImage">
                     <div class="form-group">
-                        <input type="hidden" id="hidId" value="0" />
+                        <input type="hidden" id="hidIdRoom" value="0" />
+                        <input type="hidden" id="roomId" value="0" />
                         <div class="imageList">
-
+                            <div class="table-wrap">
+                                <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
+                                    <thead>
+                                        <tr class="font-weight-bold text-dark">
+                                            <th>Ảnh phòng</th>
+                                            <th class="action-columns">Thao tác</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tbl-content-image">
+                                        <tr id="spinnerRow">
+                                            <td colspan="10" style="text-align: center;">
+                                                <div id="spinner" class="spinner-border text-primary" role="status">
+                                                    <div class="loader"></div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
+                            <label for="txtImageRoom" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
                             <div class="d-flex">
                                 <div class="col-sm-10" style="display:none">
-                                    <input type="text" class="form-control" id="txtImageShow" disabled />
-                                    <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
-                                    <input type="file" id="fileInputImage" style="display:none" />
+                                    <input type="text" class="form-control" id="txtImageShowRoom" disabled />
+                                    <input type="text" class="form-control" id="txtImageRoom" name="txtImageRoom" hidden />
+                                    <input type="file" id="fileInputImageRoom" style="display:none" />
                                 </div>
                                 <div class="col-sm-2">
-                                    <img id="imagePreview" src="~/assets/images/picture.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
+                                    <img id="imagePreviewRoom" src="~/assets/images/picture.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
                                 </div>
                             </div>
                             <div class="col-sm-2 mt-1">
@@ -32,9 +51,18 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" data-dismiss="modal">Lưu</button>
-                <button type="button" class="btn btn-danger btnCancel" data-dismiss="modal">Hủy bỏ</button>
+                <button type="button" class="btn btn-success" id="btnSaveAndContinueImage">Lưu và tiếp tục</button>
+                <button type="button" class="btn btn-danger" id="btnCancelImage" data-dismiss="modal">Hủy bỏ</button>
             </div>
         </div>
     </div>
 </div>
+
+<script id="table-template-image" type="x-tmpl-mustache">
+    <tr>
+        <td>{{{UrlImage}}}</td>
+        <td class="text-center action-columns">
+            <a href="#" data-id="{{Id}}" class="btn btn-xs btn-danger btn-deleteImage"><i class="fe-trash-2"></i></a>
+        </td>
+    </tr>
+</script>
