--- a/WebApp/Areas/Admin/Views/Room/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/Room/_AddEditModal.cshtml
@@ -29,19 +29,7 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="txtRoomCode" class="col-sm-auto control-label no-padding-right">Mã phòng </label>
-                                    <div class="col-sm-12">
-                                        <input type="text" class="form-control" id="txtRoomCode" name="txtRoomCode" placeholder="Mã phòng ">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-4">
                                 <div class="form-group">
                                     <label for="txtPrice" class="col-sm-auto control-label no-padding-right">Giá phòng <span class="text-danger">*</span></label>
                                     <div class="col-sm-12">
@@ -49,8 +37,10 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="col-sm-4">
+                        <div class="row">
+                            <div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="txtLocation" class="col-sm-auto control-label no-padding-right">Địa điểm </label>
                                     <div class="col-sm-12">
@@ -58,8 +48,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-sm-4">
+                            <div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="txtAcreage" class="col-sm-auto control-label no-padding-right">Diện tích (m2)</label>
                                     <div class="col-sm-12">
@@ -70,7 +59,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-4">
+                            <div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="txtAdult" class="col-sm-auto control-label no-padding-right">Người lớn </label>
                                     <div class="col-sm-12">
@@ -78,21 +67,11 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-sm-4">
+                            <div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="txtKid" class="col-sm-auto control-label no-padding-right">Trẻ em </label>
                                     <div class="col-sm-12">
                                         <input type="text" class="form-control" id="txtKid" name="txtKid" placeholder="Trẻ em ">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-4">
-                                <div class="form-group">
-                                    <label for="txtViews" class="col-sm-auto control-label no-padding-right">Lượt xem</label>
-                                    <div class="col-sm-12">
-                                        <input type="text" class="form-control" id="txtViews" name="txtViews" placeholder="Lượt xem ">
                                     </div>
                                 </div>
                             </div>
@@ -105,20 +84,39 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
-                            <div class="d-flex">
-                                <div class="col-sm-10" style="display:none">
-                                    <input type="text" class="form-control" id="txtImageShow" disabled />
-                                    <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
-                                    <input type="file" id="fileInputImage" style="display:none" />
-                                </div>
-                                <div class="col-sm-2">
-                                    <img id="imagePreview" src="~/assets/images/picture.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
+                                    <div class="d-flex">
+                                        <div class="col-sm-10" style="display:none">
+                                            <input type="text" class="form-control" id="txtImageShow" disabled />
+                                            <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
+                                            <input type="file" id="fileInputImage" style="display:none" />
+                                        </div>
+                                        <div class="col-sm-2">
+                                            <img id="imagePreview" src="~/assets/images/picture.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2 mt-1">
+                                        <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-sm-2 mt-1">
-                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="txtRoomCodes" class="col-sm-auto control-label no-padding-right">Mã phòng </label>
+                                    <div class="col-sm-12">
+                                        @if (!string.IsNullOrEmpty(ViewBag.QrCodeImage))
+                                        {
+                                            <img src="@ViewBag.QrCodeImage" alt="QR Code Image" width="100" height="100" />
+                                        }
+                                        else
+                                        {
+                                            <p>Không có mã QR.</p>
+                                        }
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
